wip: equation references

--- a/tests/spec.html
+++ b/tests/spec.html
@@ -14,3 +14,9 @@
 <div class="figure">
 <img src="image.png" alt="figure with no attr" /><p class="caption">figure with no attr</p>
 </div>
+<p>Here is an equation:</p>
+<p><span class="math">\[
+2 + 2 = 5
+\label{eq:silly}
+\]</span></p>
+<p>Here is a reference to Equation \eqref{eq:silly}.</p>
