unnumbered figures and sections

--- a/tests/spec.html
+++ b/tests/spec.html
@@ -20,3 +20,9 @@
 \label{eq:silly}
 \]</span></p>
 <p>Here is a reference to Equation \eqref{eq:silly}.</p>
+<h2 id="unnumbered-section" class="unnumbered">Unnumbered Section</h2>
+<p>
+<div class="figure" id="fig:nonum" class="unnumbered" >
+<img src="image.png" alt="no numbering here" /><p class="caption">no numbering here</p>
+</div>
+</p>
