--- a/tests/spec.html
+++ b/tests/spec.html
@@ -1,13 +1,13 @@
 <h2 id="sec:expt" class="class1 class2" key="value">0.1: Experiments with pandoc figures</h2>
 <p>
-<div class="figure" id="fig:attr" class="class1 class2" key=value>
+<div id="fig:attr" class="figure class1 class2" key=value>
 <img src="image.png" alt="Figure 1: a figure that can be referred to" /><p class="caption">Figure 1: a figure that can be referred to</p>
 </div>
 </p>
 <p>Here is a reference to <a href="#fig:attr">Figure 1</a> and here is one to <a href="#fig:attr2">Figure 2</a>.</p>
 <p>Here is reference to the section called <a href="#sec:expt">Section 0.1</a>.</p>
 <p>
-<div class="figure" id="fig:attr2"  >
+<div id="fig:attr2" class="figure">
 <img src="image.png" alt="Figure 2: another figure that can be referred to" /><p class="caption">Figure 2: another figure that can be referred to</p>
 </div>
 </p>
@@ -22,7 +22,7 @@
 <p>Here is a reference to Equation \eqref{eq:silly}.</p>
 <h2 id="unnumbered-section" class="unnumbered">Unnumbered Section</h2>
 <p>
-<div class="figure" id="fig:nonum" class="unnumbered" >
+<div id="fig:nonum" class="figure unnumbered">
 <img src="image.png" alt="no numbering here" /><p class="caption">no numbering here</p>
 </div>
 </p>
