implement grammar for multiple internal references

--- a/tests/spec.html
+++ b/tests/spec.html
@@ -25,3 +25,6 @@
 <img src="image.png" alt="no numbering here" /><p class="caption">no numbering here</p>
 </div>
 </p>
+<h2 id="multiple-references" class="unnumbered">Multiple references</h2>
+<p>We can refer to multiple things of the same type: Figures <a href="#fig:attr">1</a> and <a href="#fig:attr2">2</a></p>
+<p>Or to multiple things of mixed type: Section <a href="#sec:expt">0.1</a>, Equation <a href="#eq:silly">1</a> and Figures <a href="#fig:attr">1</a> and <a href="#fig:attr2">2</a></p>
