update test reference

--- a/tests/spec.html
+++ b/tests/spec.html
@@ -12,7 +12,8 @@
 </div>
 
 <div class="figure">
-<img src="image.png" alt="figure with no attr" /><p class="caption">figure with no attr</p>
+<img src="image.png" alt="figure with no attr" />
+<p class="caption">figure with no attr</p>
 </div>
 <p>Here is Equation \eqref{eq:silly}:</p>
 <p><span class="math">\[
