--- a/tests/spec.html
+++ b/tests/spec.html
@@ -15,11 +15,11 @@
 <img src="image.png" alt="figure with no attr (ˈjuːnɪˌkəʊd!)" />
 <p class="caption">figure with no attr (ˈjuːnɪˌkəʊd!)</p>
 </div>
-<p>Here is Equation \eqref{eq:silly}:</p>
-<p><span class="math">\[
+<p>Here is <a href="#eq:silly">Equation 1</a>:</p>
+<p><span id="#eq:silly"><span class="math">\[
 2 + 2 = 5
 \label{eq:silly}
-\]</span></p>
+\]</span></span></p>
 <h2 id="unnumbered-section" class="unnumbered">Unnumbered Section</h2>
 
 <div id="fig:nonum" class="figure unnumbered">
