tests: update to pandoc 1.15

--- a/tests/spec.html
+++ b/tests/spec.html
@@ -16,7 +16,7 @@
 <p class="caption">figure with no attr (ˈjuːnɪˌkəʊd!)</p>
 </div>
 <p>Here is <a href="#eq:silly">Equation 1</a>:</p>
-<p><span id="#eq:silly"><span class="math">\[
+<p><span id="#eq:silly"><span class="math display">\[
 2 + 2 = 5
 \label{eq:silly}
 \]</span></span></p>
