--- a/tests/spec.html
+++ b/tests/spec.html
@@ -16,7 +16,10 @@
 <p class="caption">figure with no attr and no link text (ˈjuːnɪˌkəʊd!)</p>
 </div>
 <p>Here is <a href="#eq:silly">Equation 1</a>:</p>
-<p><span id="#eq:silly"><br /><span class="math display">2 + 2 = 5</span><br /></span></p>
+<p><span id="#eq:silly"><span class="math display">\[
+2 + 2 = 5
+\label{eq:silly}
+\]</span></span></p>
 <h2 id="unnumbered-section" class="unnumbered">Unnumbered Section</h2>
 
 <div id="fig:nonum" class="figure unnumbered">
